# programming-languages

./: README.md  stock_maximise.py
2016oct/: astar.py  astar_cpp.cpp  test_astar.py
2016oct/crawler/: scraper.py  test_scraper.py
2017April/: dice.py  node_solution.py
go-lang/: go.mod  set_paths.fish
javascript/: hello_world.js
loktra/: reverse_hash.py
loktra/crawler/: readme.rst  scraper.py
python-projects/: functions.ipynb  hello.py  lonelyinteger.py  os module example.ipynb  pdfparsing.py  python conditionals and loops.ipynb  python conditionals.ipynb  regex_matching.py  regular expressions.ipynb  writing_to_csv.py
python-projects/2016oct/: astar.py
python-projects/2017April/: solution1.py
python-projects/algo_and_ds/: 1535_Find_the_Winner.py  1536_Minimum_Swaps_to_Arrange_a_Binary_Grid.py  2sum.py  3_sum_with_multiplicity.py  3sum_closes.py  4sum.py  absolute_diff_less_leetcode1438.py  absolute_value_sort_pramp.py  add_two_numbers_v2.py  add_values_to_array_ranges_fbinterview44.py  (+332 more)
r-lang/: data transformations in R.ipynb  data transformations in R.r  starting with r programming.ipynb
rust-lang/: readme.md
rust-lang/rust-machine-learning/chapter8/crfsuite-model/: Cargo.toml  crfsuite_model_prediction.py  crfsuite_model_training.py
rust-lang/rust-machine-learning/chapter8/crfsuite-model/data/: ner_predict.csv
rust-lang/rust-machine-learning/chapter8/crfsuite-model/src/: lib.rs
rust-lang/rust-machine-learning/chapter8/my_lambda_function/: Cargo.toml  xgb.model
rust-lang/rust-machine-learning/chapter8/my_lambda_function/src/: main.rs
(+257 files in other folders)
