[package]
name = "my_lambda_function"
version = "0.1.0"
authors = ["joydeep bhattacharjee"]
autobins = false
edition = "2018"

[dependencies]
lambda_runtime = "0.2.1"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
log = "0.4"
simple_logger = "1.3.0"
regex = "1"
simple-error = "0.2.0"
xgboost = "0.1.4"
ml-utils = { path = "../../chapter2/ml-utils" }
csv = "1.0.7"

[[bin]]
name = "bootstrap"
path = "src/main.rs"